--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-scripts": "5.0.1",
+    "react-swipeable-views-react-18-fix": "^0.14.1",
+    "react-swipeable-views-utils-react-18-fix": "^0.14.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
